Création d'un formulaire pour poster des recettes

--- a/templates/blog/read.html.twig
+++ b/templates/blog/read.html.twig
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-12 mb-4">
             <h1>{{ recipe.title }}</h1>
-            <small>{{ recipe.publishedAt|date("d/m/Y") }}</small>
+            <small>Publié le {{ recipe.publishedAt|date("d/m/Y") }}</small>
             <p>{{ recipe.content }}</p>
         </div>
     </div>
