--- a/templates/blog/recipe_list.html.twig
+++ b/templates/blog/recipe_list.html.twig
@@ -8,11 +8,17 @@
         </div>
     </div>
 
-    <ul>
-        {% for recipe in recipes %}
-            <li>
-                <a href="{{ path('show-recipe', {id : recipe.id}) }}">{{ recipe.title }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+    {% for recipe in recipes %}
+        <div class="col-4 mb-3">
+            <div class="card">
+                <div class="card-header">{{ recipe.title }}</div>
+                <div class="card-body d-flex flex-column justify-content-between">
+                    <small class="text-muted">Publiée le {{ recipe.publishedAt|date("d/m/Y") }}</small>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                    <a href="{{ path('blog_read', { id: recipe.id }) }}">Lire la suite</a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 {% endblock %}
