--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,9 @@
                     <li class="nav-item">
                         <a {% if 'recipe_list' in app.request.attributes.get('_route') %} class="active nav-link" {% endif %} class="nav-link" aria-current="page" href="{{  path('recipe_list') }}">Les Recettes</a>
                     </li>
+                    <li class="nav-item">
+                        <a {% if 'blog_create' in app.request.attributes.get('_route') %} class="active nav-link" {% endif %} class="nav-link" aria-current="page" href="{{ path('blog_create') }}">Publier une nouvelle recette</a>
+                    </li>
                 </ul>
             </div>
         </div>
