--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -5,6 +5,7 @@
 
     {{ form_start(form) }}
         {{ form_row(form.title) }}
+        {{ form_row(form.category) }}
         {{ form_row(form.content) }}
         <button type="submit">Publier</button>
     {{ form_end(form) }}
