--- a/templates/blog/recipe_list.html.twig
+++ b/templates/blog/recipe_list.html.twig
@@ -11,7 +11,7 @@
     {% for recipe in recipes %}
         <div class="col-4 mb-3">
             <div class="card">
-                <div class="card-header">{{ recipe.title }}</div>
+                <div class="card-header">{{ recipe.title }} - {{ recipe.category|capitalize }}</div>
                 <div class="card-body d-flex flex-column justify-content-between">
                     <small class="text-muted">Publiée le {{ recipe.publishedAt|date("d/m/Y") }}</small>
                 </div>
