--- a/templates/blog/recipe_list.html.twig
+++ b/templates/blog/recipe_list.html.twig
@@ -6,19 +6,43 @@
             <h1>Les Recettes</h1>
             <p>Retrouvez ici toutes les recettes publiées par les utilisateurs.</p>
         </div>
-    </div>
 
-    {% for recipe in recipes %}
-        <div class="col-4 mb-3">
-            <div class="card">
-                <div class="card-header">{{ recipe.title }} - {{ recipe.category|capitalize }}</div>
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <small class="text-muted">Publiée le {{ recipe.publishedAt|date("d/m/Y") }}</small>
-                </div>
-                <div class="card-footer d-flex justify-content-between">
-                    <a href="{{ path('blog_read', { id: recipe.id }) }}">Lire la suite</a>
+        {% for recipe in recipes %}
+            <div class="col-4 mb-3">
+                <div class="card">
+                    <div class="card-header">{{ recipe.title }} - {{ recipe.category|capitalize }}</div>
+                    <img class="card-img-top" src="https://picsum.photos/400/300" alt="{{ recipe.title }}">
+                    <div class="card-body d-flex flex-column justify-content-between">
+                        <small class="text-muted">Publiée le {{ recipe.publishedAt|date("d/m/Y") }}</small>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="{{ path('blog_read', { id: recipe.id }) }}">Lire la suite</a>
+                    </div>
                 </div>
             </div>
+        {% endfor %}
+
+        <div class="col-12 mt-4">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    {% if page > 1 %}
+                        <li class="page-item"><a class="page-link" href="{{ path('recipe_list', { page: 1 }) }}">Première page</a></li>
+                    {% endif %}
+                    {% if page > 1 %}
+                        <li class="page-item"><a class="page-link" href="{{ path('recipe_list', { page: page - 1 }) }}">Précédent</a></li>
+                    {% endif %}
+                    {% for p in range %}
+                        <li class="page-item {{ page == p ? "active" : "" }}"><a class="page-link" href="{{ path('recipe_list', { page: p }) }}">{{ p }}</a></li>
+                    {% endfor %}
+                    {% if page < pages %}
+                        <li class="page-item"><a class="page-link" href="{{ path('recipe_list', { page: page + 1 }) }}">Suivant</a></li>
+                    {% endif %}
+                    {% if page < pages %}
+                        <li class="page-item"><a class="page-link" href="{{ path('recipe_list', { page: pages }) }}">Dernière page</a></li>
+                    {% endif %}
+                </ul>
+            </nav>
         </div>
-    {% endfor %}
+
+    </div>
 {% endblock %}
