Ajout du système de modification des recettes

--- a/templates/blog/recipe_list.html.twig
+++ b/templates/blog/recipe_list.html.twig
@@ -17,6 +17,7 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <a href="{{ path('blog_read', { id: recipe.id }) }}">Lire la suite</a>
+                        <a href="{{ path('blog_update', { id: recipe.id }) }}">Modifier</a>
                     </div>
                 </div>
             </div>
