--- a/templates/blog/recipe_list.html.twig
+++ b/templates/blog/recipe_list.html.twig
@@ -19,7 +19,7 @@
         {% for recipe in recipes %}
             <div class="col-4 mb-3">
                 <div class="card">
-                    <div class="card-header">{{ recipe.title }} - {{ recipe.category|capitalize }}</div>
+                    <div class="card-header">{{ recipe.title }} - {{ recipe.category.name|capitalize }}</div>
                     <img class="card-img-top" src="https://picsum.photos/400/300" alt="{{ recipe.title }}">
                     <div class="card-body d-flex flex-column justify-content-between">
                         <small class="text-muted">Publiée le {{ recipe.publishedAt|date("d/m/Y") }}</small>
