--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,13 +1,63 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+    <br/>
     <div class="row">
         <div class="col-12 mb-4">
-            <h1>Hello World !</h1>
-            <p>Bienvenue sur le blog de recette, ici, vous pourrez consulter, créer différentes recettes et laisser des commentaires.</p>
+            <h1>Bienvenue sur le blog de recette</h1>
+            <p>Ici, vous pourrez consulter, créer différentes recettes et laisser des commentaires.</p>
             <p>Belle journée et profitez de nos succulentes recettes !</p>
         </div>
     </div>
+
+    <div class="class">
+        <h2><strong>Les dernières recettes publiées :</strong></h2>
+    </div>
+
+    <br/>
+
+{#    <div class="col-lg-8 offset-lg-2">#}
+        <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
+
+            <ol class="carousel-indicators">
+                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"></li>
+                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"></li>
+            </ol>
+
+            <div class="carousel-inner">
+                {% for recipe in recipes %}
+                {% if loop.index == 1 %}
+                <div class="carousel-item active">
+                    {% else %}
+                    <div class="carousel-item">
+                        {% endif %}
+                        <img class="card-img-top" src="https://picsum.photos/200/100" alt="{{ recipe.title }}">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>{{ recipe.category.name|capitalize }}</h5>
+                            <h4>{{ recipe.title }}</h4>
+                            <p>
+                                <a href="{{ path('blog_read', { id: recipe.id }) }}">Lire la suite</a>
+                            </p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Précédent</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Suivant</span>
+                </a>
+            </div>
+
+        </div>
+{#    </div>#}
+
 {% endblock %}
 
 
