--- a/templates/blog/read.html.twig
+++ b/templates/blog/read.html.twig
@@ -1,10 +1,11 @@
 {% extends "base.html.twig" %}
 
-{% block body %}
+{% block readRecipe %}
     <div class="row">
-        <div class="col-12 mb-4">
+        <div class="col-lg-8 offset-lg-2">
             <h1>{{ recipe.title }}</h1>
             <h3>{{ recipe.category.name|capitalize }}</h3>
+            <img class="card-img-top" src="https://picsum.photos/200/100" alt="{{ recipe.title }}">
             <small>Publié le {{ recipe.publishedAt|date("d/m/Y") }}</small>
             <p>{{ recipe.content }}</p>
         </div>
