--- a/templates/blog/update.html.twig
+++ b/templates/blog/update.html.twig
@@ -14,6 +14,7 @@
             {{ form_start(form) }}
                 {{ form_row(form.title) }}
                 {{ form_row(form.category) }}
+                {{ form_row(form.file) }}
                 {{ form_row(form.content) }}
                 <button type="submit">Modifier</button>
             {{ form_end(form) }}
