--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -1,22 +1,51 @@
 {% extends 'base.html.twig' %}
 
 {% block createRecipe %}
+
+    <br/>
+
     <div class="col-lg-10 offset-lg-1">
         <div class="container">
             <h1>Publier une nouvelle recette</h1>
         </div>
     </div>
 
+{#    <br/>#}
+
+{#    <div class="col-lg-8 offset-lg-2">#}
+{#        <div class="container">#}
+{#            {{ form_start(form) }}#}
+{#                {{ form_row(form.title) }}#}
+{#                {{ form_row(form.category) }}#}
+{#                {{ form_row(form.file) }}#}
+{#                {{ form_row(form.content) }}#}
+{#                <button type="submit">Publier</button>#}
+{#            {{ form_end(form) }}#}
+{#        </div>#}
+{#    </div>#}
+
     <br/>
 
     <div class="col-lg-8 offset-lg-2">
         <div class="container">
             {{ form_start(form) }}
-                {{ form_row(form.title) }}
-                {{ form_row(form.category) }}
-                {{ form_row(form.file) }}
-                {{ form_row(form.content) }}
-                <button type="submit">Publier</button>
+                <div class="mb-4">
+                    {{ form_row(form.title) }}
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        {{ form_widget(form.category) }}
+                    </div>
+                    <div class="col-6">
+                        {{ form_widget(form.file) }}
+                    </div>
+                </div>
+                <div class="mb-4">
+                    {{ form_row(form.content) }}
+                </div>
+                <div>
+                    <button class="btn btn-publish" type="submit">Publier</button>
+                </div>
             {{ form_end(form) }}
         </div>
     </div>
