--- a/templates/blog/read.html.twig
+++ b/templates/blog/read.html.twig
@@ -5,7 +5,7 @@
 
         <div class="col-lg-8 offset-lg-2">
             <div class="row">
-                <h1>{{ recipe.category.name|capitalize }} - <strong>{{ recipe.title }}</strong></h1>
+                <h1>{{ recipe.category.name|capitalize }} - <strong class="italic-text">{{ recipe.title }}</strong></h1>
                 <small>Publié le {{ recipe.publishedAt|date("d/m/Y") }}</small>
             </div>
             <br/>
@@ -17,7 +17,7 @@
                         <br/>
                         <div class="col-lg-10 offset-lg-1">
                             <h3><i class="bi bi-hourglass-split"></i> Temps de préparation :</h3>
-                            <p>20 minutes</p>
+                            <p>{{ recipe.preparationTime|format_datetime('none', 'short', locale='fr') }}</p>
                         </div>
                     </div>
                     <br/>
@@ -25,7 +25,7 @@
                         <br/>
                         <div class="col-lg-10 offset-lg-1">
                             <h3><i class="bi bi-hourglass-split"></i> Temps de cuisson :</h3>
-                            <p>10 minutes</p>
+                            <p>{{ recipe.cookingTime|format_datetime('none', 'short', locale='fr') }}</p>
                         </div>
                     </div>
                     <br/>
@@ -54,16 +54,13 @@
             </div>
             <br/>
             <div class="card card-read-recipe">
-                <div class="col-lg-10 offset-lg-1">
+                <div class="col-lg-10 offset-lg-1 italic-text">
+                    <br/>
                     <h3>Notes</h3>
-                    <p>-------------------------------------------------------------------------------------------------
-                    ----------------------------------------------------------------------------------------------------
-                    ------------------------------------------------------------------------------------------------</p>
+                    <pre>{{ recipe.note }}</pre>
                 </div>
             </div>
         </div>
 
     <br/>
 {% endblock %}
-
-
